--- a/z-axis/pom.xml
+++ b/z-axis/pom.xml
@@ -11,10 +11,11 @@
     </parent>
     <packaging>pom</packaging>
     <artifactId>z-axis</artifactId>
+    <name>scaling-software:z-axis</name>
 
     <modules>
         <module>redis</module>
-         <module>neo4j</module>
+        <module>neo4j</module>
         <module>mongodb</module>
     </modules>
 
