--- a/x-axis/aggressive-consumer/producer/pom.xml
+++ b/x-axis/aggressive-consumer/producer/pom.xml
@@ -11,4 +11,11 @@
     <name>scaling-software:x-axis:aggressive-consumer:producer</name>
 
     <artifactId>producer</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+    </dependencies>
 </project>
