--- a/y-axis/pom.xml
+++ b/y-axis/pom.xml
@@ -3,10 +3,10 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <groupId>scaling-software</groupId>
+    <artifactId>y-axis</artifactId>
 
-    <groupId>doge-microservice</groupId>
-    <artifactId>core</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <!--  <parent>
           <groupId>org.springframework.cloud</groupId>
