--- a/z-axis/neo4j/src/main/resources/application.properties
+++ b/z-axis/neo4j/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 neo4j.url http://localhost:7474/db/data/
-twitter.bearerToken REPLACE ME!!!!
+twitter.bearerToken AAAAAAAAAAAAAAAAAAAAAC5%2BawAAAAAAYy%2ByoAH04ba4bKIUYYAkbqyFkwI%3DuoDPt4zIZ2Xss3VyiLPx4ye1wCiHSILBBQqKBscTOFcHN9bkxn
